--- a/front end/lecturer.css
+++ b/front end/lecturer.css
@@ -1,15 +1,13 @@
-/* style.css */
-
+/* styles.css */
 body {
   font-family: Arial, sans-serif;
-  background-color: #3876BF;
+  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
 }
 
 .container {
-  width: 80%;
-  max-width: 960px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
   background-color: #fff;
@@ -18,45 +16,39 @@ body {
 }
 
 h1 {
-  text-align: center;
+  color: #0073e6;
   font-size: 24px;
   margin-bottom: 20px;
+}
+
+h2 {
   color: #333;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
-  border: 1px solid #ddd;
-  background-color: whi;
+  margin-top: 10px;
 }
 
-table th, table td {
-  padding: 12px;
-  text-align: center;
-  border: 1px solid #ddd;
+table, th, td {
+  border: 1px solid #0073e6;
 }
 
-table th {
-  background-color: black;
-  color: #fff;
-  font-weight: bold;
+th, td {
+  padding: 10px;
+  text-align: left;
 }
 
-table tr:nth-child(even) {
+input[type="text"] {
+  width: 50px;
+  padding: 5px;
+}
+
+/* Add a light blue background color for even rows in the student table */
+table:nth-child(even) {
   background-color: #f2f2f2;
 }
-
-table tr:hover {
-  background-color: #ddd;
-}
-
-h2 {
-  font-size: 20px;
-  color: #333;
-  margin-top: 30px;
-  text-align: center;
-}
-
-/* Adjust other element styles as needed */
