--- a/front end/student.css
+++ b/front end/student.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #bcfd49;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
