--- a/university management system/src/main/resources/templates/headofdepartment.html
+++ b/university management system/src/main/resources/templates/headofdepartment.html
@@ -26,19 +26,20 @@
 		</tr>
 		</tbody>
 	</table>
-	
+
 	<div class = "row">
 		<h1> List Students </h1>
 	</div>
 
 	<div class = "row">
 		<div class = "col-lg-3">
-			<a th:href = "@{/students/new}" class = "btn btn-primary btn-sm mb-3"> Add Student</a>
+			<a th:href = "@{/headofdepartment/new}" class = "btn btn-primary btn-sm mb-3"> Add Student</a>
 		</div>
 	</div>
 	<table class = "table table-striped table-bordered">
 		<thead class = "table-dark">
 		<tr>
+			<th> Student ID</th>
 			<th> Student First Name</th>
 			<th> Student Last Name</th>
 			<th> Student Dob </th>
@@ -53,6 +54,7 @@
 
 		<tbody>
 		<tr th:each = "student: ${students}">
+			<td th:text ="${student.id}"></td>
 			<td th:text = "${student.firstName}"></td>
 			<td th:text = "${student.lastName}"></td>
 			<td th:text = "${student.dateOfBirth}"></td>
