--- a/university management system/src/main/resources/templates/headofdepartment.html
+++ b/university management system/src/main/resources/templates/headofdepartment.html
@@ -10,25 +10,25 @@
 </head>
 <body>
 <div class ="container">
-	<table class="table table-striped table-bordered">
-		<thead class="table-dark">
-		<tr>
-			<th> Name</th>
-			<th> Last Name</th>
-			<th> School</th>
-		</tr>
-		</thead>
-		<tbody>
-		<tr>
-			<td>Ramaz</td>
-			<td>Bothcorishvili</td>
-			<td>Computer Science</td>
-		</tr>
-		</tbody>
-	</table>
+<!--	<table class="table table-striped table-bordered">-->
+<!--		<thead class="table-dark">-->
+<!--		<tr>-->
+<!--			<th> Name</th>-->
+<!--			<th> Last Name</th>-->
+<!--			<th> School</th>-->
+<!--		</tr>-->
+<!--		</thead>-->
+<!--		<tbody>-->
+<!--		<tr>-->
+<!--			<td>Ramaz</td>-->
+<!--			<td>Bothcorishvili</td>-->
+<!--			<td>Computer Science</td>-->
+<!--		</tr>-->
+<!--		</tbody>-->
+<!--	</table>-->
 
 	<div class = "row">
-		<h1> List Students </h1>
+		<h1> Student List </h1>
 	</div>
 
 	<div class = "row">
