simple student and lecturer page added

--- a/university management system/src/main/resources/templates/updatestudent.html
+++ b/university management system/src/main/resources/templates/updatestudent.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class="text-center">Add New Student</h1>
+      <h1 class="text-center">Update Student</h1>
       <div class="card-body">
         <form th:action="@{/headofdepartment/{id} (id=${student.id})}" th:object = "${student}" method="POST">
           <div class="form-group">
