--- a/university management system/src/main/resources/templates/schoolstudent.html
+++ b/university management system/src/main/resources/templates/schoolstudent.html
@@ -11,7 +11,7 @@
 <body>
 <div class ="container">
   <div class = "row">
-    <h1 th:text="${schoolName + ' School Student List'}"></h1>
+    <h1 th:text="${schoolName + ' School'}"></h1>
   </div>
   <table class = "table table-striped table-bordered">
     <thead class = "table-dark">
@@ -39,6 +39,7 @@
 <!--      <a th:href = "@{/headofdepartment/new}" class = "btn btn-primary btn-sm mb-3"> Add Student</a>-->
 <!--    </div>-->
 <!--  </div>-->
+  <h1>Student List</h1>
   <table class = "table table-striped table-bordered">
     <thead class = "table-dark">
     <tr>
@@ -52,7 +53,6 @@
       <th> Student Phone </th>
       <th> Student GPA </th>
       <th> Student School</th>
-<!--      <th> Actions </th>-->
     </tr>
     </thead>
 
@@ -68,14 +68,6 @@
       <td th:text = "${student.phoneNumber}"></td>
       <td th:text = "${student.gpa}"></td>
       <td th:text = "${student.school.name}"></td>
-<!--      <td>-->
-<!--        <a th:href = "@{/headofdepartment/edit/{id}(id=${student.id})}"-->
-<!--           class = "btn btn-primary">Update</a>-->
-
-<!--        <a th:href = "@{/headofdepartment/{id}(id=${student.id})}"-->
-<!--           class = "btn btn-danger">Delete</a>-->
-
-<!--      </td>-->
     </tr>
     </tbody>
 
